Add source-method: pre-packaged-source to composer.json
This tells PIE to use the php_maxminddb-{version}-src.tgz tarball
from GitHub releases instead of the default ZIP download.

The pre-packaged source is required because PIE doesn't handle
git submodules when downloading from Composer/GitHub.

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "priority": 50,
     "support-zts": true,
     "support-nts": true,
+    "source-method": "pre-packaged-source",
     "build-path": "MaxMind-DB-Reader-php/ext",
     "configure-options": [
       {
