Fix field name: download-url-method instead of source-method
PIE uses 'download-url-method', not 'source-method'.
Also removed build-path since pre-packaged tarballs have files at root.

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "priority": 50,
     "support-zts": true,
     "support-nts": true,
-    "source-method": "pre-packaged-source",
-    "build-path": "MaxMind-DB-Reader-php/ext",
+    "download-url-method": "pre-packaged-source",
     "configure-options": [
       {
         "name": "with-maxminddb",
